# advent-2023

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
days/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py
src/advent_2023/: __about__.py  __init__.py  day.py
